[feat] Add topbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- bocco macro sopra -->
+    <!-- blocco macro sopra -->
     <div id="wrapper">
 
         <!-- navigazione parte sinistra -->
@@ -24,6 +24,11 @@
 
         <!-- parte di contenuto principale -->
         <main>
+
+            <div id="topbar">
+
+            </div>
+
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sunt incidunt deserunt repellendus
                 aliquid eaque, omnis minus nihil rerum sed, excepturi voluptatem velit! Sunt nesciunt voluptate ratione
