[feat] Add topbar section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
         <!-- navigazione parte sinistra -->
         <nav>
 
+            <div>
+                <img src="./img/logo.svg" alt="Spotify logo">
+            </div>
+
+            <ul>
+                <li>
+                    <img src="./img/home.svg" alt="Spotify homepage">&nbsp;<a href="#">Home</a>
+                </li>
+                <li>
+                    <img src="./img/search.svg" alt="Spotify search">&nbsp;<a href="#">Cerca</a>
+                </li>
+                <li>
+                    <img src="./img/libreria.svg" alt="Spotify library">&nbsp;<a href="#">La tua libreria</a>
+                </li>
+            </ul>
+
         </nav>
 
         <!-- parte di contenuto principale -->
