[feat] Add topbar button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
                 </li>
             </ul>
 
+            <h2>PLAYLIST</h2>
+
+            <ul>
+                <li>
+                    <i class="fa-solid fa-plus"></i> &nbsp; Crea Playlist
+                </li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+            </ul>
+
+            <p class="lg-margin-top">
+                <img src="./img/download.svg" alt="Spotify download" srcset=""> &nbsp; Installa app
+            </p>
+
+            <hr>
+
+            <p>
+                <button class="profile-btn">
+                    <img src="./img/profile.svg" alt="Spotify user experience">
+                </button> &nbsp; <strong>John Doe</strong>
+            </p>
+
         </nav>
 
         <!-- parte di contenuto principale -->
