--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div id="topbar">
 
-                <button>
+                <button class="upgrade-btn">
                     EFFETTUA L'UPGRADE
                 </button>
 
